--- a/package.json
+++ b/package.json
@@ -5,17 +5,26 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "start-web": "react-scripts start",
+    "build-web": "react-scripts build"
   },
   "dependencies": {
     "expo": "^35.0.0",
     "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "react-art": "^16.11.0",
+    "react-dom": "^16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "react-router-dom": "^5.1.2",
+    "react-router-native": "^5.1.2",
+    "react-scripts": "^3.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
   },
-  "private": true
+  "private": true,
+  "browserslist": [
+    "defaults"
+  ]
 }
