--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-web": "^0.11.7",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
-    "react-scripts": "^3.2.0"
+    "react-scripts": "^3.2.0",
+    "react-sticky-footer": "0.1.0-rc3"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
