--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "react-scripts": "^3.2.0",
-    "react-sticky-footer": "0.1.0-rc3"
+    "react-scroll": "^1.7.14",
+    "react-sticky-footer": "0.1.0-rc3",
+    "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
