--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "build-web": "react-scripts build"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "expo": "^35.0.0",
-    "react": "16.8.3",
     "react-art": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-burger-menu": "^2.6.12",
     "react-dom": "^16.8.3",
+    "react-icons": "^3.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
+    "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-scroll": "^1.7.14",
-    "react-sticky-footer": "0.1.0-rc3",
+    "react-social-icons": "^4.1.0",
+    "react-toastify": "^5.4.1",
+    "react-tooltip": "^3.11.1",
     "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
