--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "expo": "^35.0.0",
+    "react": "^16.12.0",
     "react-art": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-burger-menu": "^2.6.12",
