Replace custom scroll tip with a toastify notification, other fixes

--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "expo": "^35.0.0",
+    "glamor": "^2.20.40",
     "react": "^16.12.0",
     "react-art": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-burger-menu": "^2.6.12",
+    "react-cache": "^2.0.0-alpha.1",
     "react-dom": "^16.8.3",
     "react-icons": "^3.8.0",
+    "react-loading-overlay": "^1.0.1",
+    "react-loading-screen": "0.0.17",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
     "react-pdf": "^4.1.0",
@@ -26,6 +30,7 @@
     "react-scripts": "^3.2.0",
     "react-scroll": "^1.7.14",
     "react-social-icons": "^4.1.0",
+    "react-spinners": "^0.6.1",
     "react-toastify": "^5.4.1",
     "react-tooltip": "^3.11.1",
     "react-transition-group": "^4.3.0"
