--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "start-web": "react-scripts start",
-    "build-web": "react-scripts build"
+    "build-web": "react-scripts build",
+    "upgrade-interactive": "npm-check --update"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.1",
-    "expo": "^35.0.0",
+    "expo": "^36.0.2",
     "glamor": "^2.20.40",
     "jquery": "^3.4.1",
     "react": "^16.8.3",
@@ -33,14 +34,15 @@
     "react-scripts": "^3.3.0",
     "react-scroll": "^1.7.15",
     "react-social-icons": "^4.1.0",
-    "react-spinners": "^0.6.1",
-    "react-toastify": "^5.4.1",
+    "react-spinners": "^0.7.2",
+    "react-toastify": "^5.5.0",
     "react-tooltip": "^3.11.1",
     "react-transition-group": "^4.3.0",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^8.0.0",
+    "npm-check": "^5.9.0"
   },
   "private": true,
   "browserslist": [
