--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-native": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-scroll": "^1.7.15",
+    "react-select": "^3.0.8",
     "react-social-icons": "^4.1.0",
     "react-spinners": "^0.7.2",
     "react-toastify": "^5.5.0",
