Change nav bar to horizontal

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react": "^16.8.3",
     "react-art": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-burger-menu": "^2.6.13",
     "react-cache": "^2.0.0-alpha.1",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.8.3",
     "react-favicon": "0.0.17",
     "react-google-recaptcha": "^2.0.1",
@@ -28,6 +28,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
+    "react-onclickoutside": "^6.9.0",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
