--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "core-js": "^3.6.1",
+    "core-js": "^3.6.4",
     "expo": "^36.0.2",
     "glamor": "^2.20.40",
     "jquery": "^3.4.1",
@@ -25,22 +25,24 @@
     "react-favicon": "0.0.17",
     "react-google-recaptcha": "^2.0.1",
     "react-icons": "^3.8.0",
+    "react-image-gallery": "^1.0.5",
     "react-loading-overlay": "^1.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
     "react-onclickoutside": "^6.9.0",
     "react-pdf": "^4.1.0",
+    "react-player": "^1.14.2",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "react-scroll": "^1.7.15",
+    "react-scroll": "^1.7.16",
     "react-select": "^3.0.8",
     "react-social-icons": "^4.1.0",
-    "react-spinners": "^0.7.2",
+    "react-spinners": "^0.8.0",
     "react-toastify": "^5.5.0",
-    "react-tooltip": "^3.11.1",
+    "react-tooltip": "^3.11.2",
     "react-transition-group": "^4.3.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0",
