--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
     "upgrade-interactive": "npm-check --update"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.6.4",
+    "bootstrap": "^4.5.0",
+    "core-js": "^3.6.5",
     "expo": "^36.0.2",
     "glamor": "^2.20.40",
-    "jquery": "^3.4.1",
-    "react": "^16.8.3",
-    "react-art": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "jquery": "^3.5.1",
+    "react": "^16.13.1",
+    "react-art": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-cache": "^2.0.0-alpha.1",
-    "react-device-detect": "^1.11.14",
-    "react-dom": "^16.8.3",
+    "react-device-detect": "^1.13.1",
+    "react-dom": "^16.13.1",
     "react-favicon": "0.0.17",
-    "react-google-recaptcha": "^2.0.1",
-    "react-icons": "^3.8.0",
-    "react-image-gallery": "^1.0.5",
+    "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^3.10.0",
+    "react-image-gallery": "^1.0.8",
     "react-loading-overlay": "^1.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
     "react-onclickoutside": "^6.9.0",
-    "react-pdf": "^4.1.0",
-    "react-player": "^1.14.2",
-    "react-router-dom": "^5.1.2",
-    "react-router-native": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "react-scroll": "^1.7.16",
-    "react-select": "^3.0.8",
+    "react-pdf": "^4.2.0",
+    "react-player": "^1.15.3",
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-scroll": "^1.8.0",
+    "react-select": "^3.1.0",
     "react-social-icons": "^4.1.0",
-    "react-spinners": "^0.8.0",
+    "react-spinners": "^0.8.3",
     "react-toastify": "^5.5.0",
-    "react-tooltip": "^3.11.2",
-    "react-transition-group": "^4.3.0",
-    "typescript": "^3.7.5"
+    "react-tooltip": "^3.11.6",
+    "react-transition-group": "^4.4.1",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.0.0",
-    "npm-check": "^5.9.0"
+    "babel-preset-expo": "^8.2.3",
+    "npm-check": "^5.9.2"
   },
   "private": true,
   "browserslist": [
