--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -143,5 +143,17 @@
             "The task is to design an ML model that can accurately predict the age of a person based on their brain MRI scan. An application of such a network can be detecting discrepancy between person's age and their brain age which could be indicative of abnormalities in cognitive aging.",
             "The developed model is a 3D convolutional neural network (CNN) with a custom architecture based on the VGG-net implemented in PyTorch. After 30 epochs of training, the CNN is able to predict the age with an average error of 5.18 years. The MRI scans and visualisations were supplied by Imeprial College London."
         ]
+    },
+    {
+        "key": 13,
+        "title": "Spoiless - Chrome Extension",
+        "tags": ["Chrome_Extension", "Browser", "DOM_Manipulation", "JS"],
+        "imgPath": "spoiless.jpg",
+        "srcUrl": "https://github.com/marektopolewski/spoiless",
+        "category": "Web Development",
+        "content": [
+            "Chromium add-on for safe-from-spoilers experience in your browser. The extension modifies the DOM of pages to hide text that contians spoiler-containing text blocks and blurs all images. Hidden content can be revealed by double-clicking it.",
+            "The filter runs in two modes - whitelist or blacklist. If in whitelist, then all whitelisted websites are ignored by the filter even if spoilers are found. If in blacklist, then the filter runs only on the blacklisted websites and other pages are omitted in the filtering."
+        ]
     }
 ]
